--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="flex items-center">
                     <h1 class="text-2xl font-bold text-primary">
                         <i class="fas fa-briefcase mr-2"></i>
-                        Mi Portafolio
+                        Mi Portafolio Base de Datos II
                     </h1>
                 </div>
                 <div class="hidden md:flex space-x-6">
@@ -78,10 +78,9 @@
     <section id="inicio" class="gradient-bg text-white py-20 mt-16">
         <div class="container mx-auto px-4 text-center">
             <div class="max-w-4xl mx-auto">
-                <h2 class="text-5xl font-bold mb-6">Bienvenido a Mi Portafolio</h2>
+                <h2 class="text-5xl font-bold mb-6">Bienvenido a Mi Portafolio personal</h2>
                 <p class="text-xl mb-8 opacity-90">
-                    Aquí puedes explorar mi colección de trabajos y proyectos. 
-                    Organiza, busca y gestiona tu portafolio profesional.
+                    Aqui puedes encontrar trabajos realizados en la materia de Base de Datos II durante el ciclo academico 2025.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <button onclick="openAddProjectModal()" class="bg-white text-primary px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition duration-300">
@@ -125,16 +124,16 @@
                             Todos
                         </button>
                         <button onclick="filterProjects('web')" class="filter-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-300 transition duration-300">
-                            Web
+                            SEMANA 1
                         </button>
                         <button onclick="filterProjects('mobile')" class="filter-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-300 transition duration-300">
-                            Móvil
+                            SEMANA 2
                         </button>
                         <button onclick="filterProjects('design')" class="filter-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-300 transition duration-300">
-                            Diseño
+                            SEMANA 
                         </button>
                         <button onclick="filterProjects('other')" class="filter-btn bg-gray-200 text-gray-700 px-4 py-2 rounded-lg hover:bg-gray-300 transition duration-300">
-                            Otros
+                            SEMANA 4
                         </button>
                     </div>
                 </div>
@@ -220,10 +219,10 @@
                         <label for="projectCategory" class="block text-sm font-medium text-gray-700 mb-2">Categoría *</label>
                         <select id="projectCategory" required class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-transparent">
                             <option value="">Seleccionar categoría</option>
-                            <option value="web">Desarrollo Web</option>
-                            <option value="mobile">Aplicación Móvil</option>
-                            <option value="design">Diseño</option>
-                            <option value="other">Otros</option>
+                            <option value="web">semana 01</option>
+                            <option value="mobile">semana 02</option>
+                            <option value="design">semana 03</option>
+                            <option value="other">semana 04</option>
                         </select>
                     </div>
                     
